gitops/resources/mesh-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-demo
  labels:
    istio.io/dataplane-mode: ambient
    gateway-access: public

    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted

    platform.merveilles.org/tier: app
    platform.merveilles.org/owner: platform
