gitops/resources/mesh-demo/deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: mesh-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
